src/typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__aggregate User out.snap
---
source: src/typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(out)
---
root: struct #59
├─ [_avg]: struct 'User_avg_aggregate' #51
│  └─ [id]: optional #49
│     └─ item: float #48
├─ [_count]: struct 'User_count_aggregate' #46
│  ├─ [_all]: optional #44
│  │  └─ item: integer #43
│  ├─ [id]: optional #44
│  │  └─ item: integer #43
│  ├─ [name]: optional #44
│  │  └─ item: integer #43
│  └─ [posts]: optional #44
│     └─ item: integer #43
├─ [_max]: &User_number_aggregate #52
├─ [_min]: &User_number_aggregate #52
└─ [_sum]: struct 'User_number_aggregate' #58
   └─ [id]: optional #56
      └─ item: integer #55
