src/typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__create_many Record inp.snap
---
source: src/typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(inp)
---
root: struct #17
└─ [data]: list 'list_15' #16
   └─ item: struct 'Record_create_input' #14
      ├─ [age]: optional 'optional_7' #8
      │  └─ item: integer #6
      ├─ [created_at]: string #1
      ├─ [id]: optional 'optional_11' #12
      │  └─ item: string #4
      └─ [name]: string #5
