src/typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__create_one Post inp.snap
---
source: src/typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(inp)
---
root: struct #139
└─ [data]: struct 'Post_create_input' #138
   ├─ [author]: union #136
   │  ├─ variant_0: struct #133
   │  │  └─ [create]: struct 'User_create_input_excluding_rel_Post_User' #111
   │  │     ├─ [id]: integer #16
   │  │     └─ [name]: string #17
   │  ├─ variant_1: struct #134
   │  │  └─ [connect]: struct 'User_where' #131
   │  │     ├─ [id]: optional #113
   │  │     │  └─ item: &_prisma_integer_filter_ex #37
   │  │     ├─ [name]: optional #114
   │  │     │  └─ item: &_prisma_string_filter_ex #54
   │  │     └─ [posts]: optional #129
   │  │        └─ item: union #128
   │  │           ├─ variant_0: struct #123
   │  │           │  └─ [every]: optional #122
   │  │           │     └─ item: struct 'Post_where_excluding_User' #121
   │  │           │        ├─ [author]: optional #119
   │  │           │        │  └─ item: &User_where #118
   │  │           │        ├─ [id]: optional #116
   │  │           │        │  └─ item: &_prisma_integer_filter_ex #37
   │  │           │        └─ [title]: optional #117
   │  │           │           └─ item: &_prisma_string_filter_ex #54
   │  │           ├─ variant_1: struct #125
   │  │           │  └─ [some]: optional #124
   │  │           │     └─ item: struct 'Post_where_excluding_User' #121
   │  │           │        ├─ [author]: optional #119
   │  │           │        │  └─ item: &User_where #118
   │  │           │        ├─ [id]: optional #116
   │  │           │        │  └─ item: &_prisma_integer_filter_ex #37
   │  │           │        └─ [title]: optional #117
   │  │           │           └─ item: &_prisma_string_filter_ex #54
   │  │           └─ variant_2: struct #127
   │  │              └─ [none]: optional #126
   │  │                 └─ item: struct 'Post_where_excluding_User' #121
   │  │                    ├─ [author]: optional #119
   │  │                    │  └─ item: &User_where #118
   │  │                    ├─ [id]: optional #116
   │  │                    │  └─ item: &_prisma_integer_filter_ex #37
   │  │                    └─ [title]: optional #117
   │  │                       └─ item: &_prisma_string_filter_ex #54
   │  └─ variant_2: struct #135
   │     └─ [connectOrCreate]: struct #132
   │        ├─ [create]: struct 'User_create_input_excluding_rel_Post_User' #111
   │        │  ├─ [id]: integer #16
   │        │  └─ [name]: string #17
   │        └─ [where]: struct 'User_where' #131
   │           ├─ [id]: optional #113
   │           │  └─ item: &_prisma_integer_filter_ex #37
   │           ├─ [name]: optional #114
   │           │  └─ item: &_prisma_string_filter_ex #54
   │           └─ [posts]: optional #129
   │              └─ item: union #128
   │                 ├─ variant_0: struct #123
   │                 │  └─ [every]: optional #122
   │                 │     └─ item: struct 'Post_where_excluding_User' #121
   │                 │        ├─ [author]: optional #119
   │                 │        │  └─ item: &User_where #118
   │                 │        ├─ [id]: optional #116
   │                 │        │  └─ item: &_prisma_integer_filter_ex #37
   │                 │        └─ [title]: optional #117
   │                 │           └─ item: &_prisma_string_filter_ex #54
   │                 ├─ variant_1: struct #125
   │                 │  └─ [some]: optional #124
   │                 │     └─ item: struct 'Post_where_excluding_User' #121
   │                 │        ├─ [author]: optional #119
   │                 │        │  └─ item: &User_where #118
   │                 │        ├─ [id]: optional #116
   │                 │        │  └─ item: &_prisma_integer_filter_ex #37
   │                 │        └─ [title]: optional #117
   │                 │           └─ item: &_prisma_string_filter_ex #54
   │                 └─ variant_2: struct #127
   │                    └─ [none]: optional #126
   │                       └─ item: struct 'Post_where_excluding_User' #121
   │                          ├─ [author]: optional #119
   │                          │  └─ item: &User_where #118
   │                          ├─ [id]: optional #116
   │                          │  └─ item: &_prisma_integer_filter_ex #37
   │                          └─ [title]: optional #117
   │                             └─ item: &_prisma_string_filter_ex #54
   ├─ [id]: optional #108
   │  └─ item: integer #24
   └─ [title]: string #25
