src/typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__create_one Record inp.snap
---
source: src/typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(inp)
---
root: struct #9
└─ [data]: struct 'Record_create_input' #8
   ├─ [age]: optional #5
   │  └─ item: integer #4
   ├─ [created_at]: string #1
   ├─ [id]: optional #7
   │  └─ item: string #2
   └─ [name]: string #3
