src/typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__find_first Post out.snap
---
source: src/typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(out)
---
root: optional #42
└─ item: struct 'Post_output' #41
   ├─ [author]: struct 'User_output_excluding_rel_Post_User' #39
   │  ├─ [id]: integer #15
   │  └─ [name]: string #16
   ├─ [id]: integer #23
   └─ [title]: string #24
