src/typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__find_first Record out.snap
---
source: src/typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(out)
---
root: optional 'optional_13' #14
└─ item: struct 'Record_output' #12
   ├─ [age]: optional 'optional_7' #8
   │  └─ item: integer #6
   ├─ [created_at]: string #1
   ├─ [id]: string #4
   └─ [name]: string #5
